# HRA2048

./: CMakeLists.txt
HRA2048/: 2048.cpp  2048.h  CMakeLists.txt  main.cpp
